// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no value and no options 1`] = `
.c2 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c2 span {
  font-size: inherit;
  line-height: inherit;
}

.c1 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c3 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c5 :focus {
  border: 1px solid #666;
}

.c4 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

@media (min-width: 740px) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 740px) {
  .c5 {
    max-width: 290px;
  }
}

<div
  className="c0 TextInputWithDropdown"
  data-testid="TextInputWithDropdownContainer"
  onKeyDown={[Function]}
>
  <label
    className="c1 TextInputWithDropdown__input"
    htmlFor="text-input-with-dropdown"
  >
    <span
      className="c2 c3"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for bikes",
        }
      }
    />
    <div
      className="c4"
    >
      <input
        aria-describedby="text-input-with-dropdown"
        autoComplete="off"
        className="c5"
        data-testid="TextInputWithDropdownInput"
        error={false}
        id="text-input-with-dropdown"
        name="query"
        onChange={[Function]}
        placeholder=""
        prefixLength={0}
        required={false}
        type="text"
        value=""
      />
    </div>
  </label>
</div>
`;

exports[`renders correctly with value and no options 1`] = `
.c2 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c2 span {
  font-size: inherit;
  line-height: inherit;
}

.c1 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c3 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c5 :focus {
  border: 1px solid #666;
}

.c4 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

@media (min-width: 740px) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 740px) {
  .c5 {
    max-width: 290px;
  }
}

<div
  className="c0 TextInputWithDropdown"
  data-testid="TextInputWithDropdownContainer"
  onKeyDown={[Function]}
>
  <label
    className="c1 TextInputWithDropdown__input"
    htmlFor="text-input-with-dropdown"
  >
    <span
      className="c2 c3"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for bikes",
        }
      }
    />
    <div
      className="c4"
    >
      <input
        aria-describedby="text-input-with-dropdown"
        autoComplete="off"
        className="c5"
        data-testid="TextInputWithDropdownInput"
        error={false}
        id="text-input-with-dropdown"
        name="query"
        onChange={[Function]}
        placeholder=""
        prefixLength={0}
        required={false}
        type="text"
        value="bikes"
      />
    </div>
  </label>
</div>
`;

exports[`renders correctly with value and options 1`] = `
.c2 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c2 span {
  font-size: inherit;
  line-height: inherit;
}

.c1 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c3 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c5 :focus {
  border: 1px solid #666;
}

.c4 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

.c6 {
  z-index: 3;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  position: absolute;
  left: 0;
  max-height: 300px;
  overflow: auto;
  background-color: #FFFFFF;
  border: 1px solid;
  margin-top: -1px;
  width: 100%;
}

.c7 {
  list-style: none;
  padding: 0;
  margin: 0;
}

.c8 {
  padding: 0.5rem;
}

.c9 {
  cursor: pointer;
  border-top: 1px solid #F4F3F5;
}

.c9:hover,
.c9:focus {
  background-color: #F4F3F5;
}

@media (min-width: 740px) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 740px) {
  .c5 {
    max-width: 290px;
  }
}

@media (min-width: 740px) {
  .c6 {
    max-width: 500px;
  }
}

<div
  className="c0 TextInputWithDropdown"
  data-testid="TextInputWithDropdownContainer"
  onKeyDown={[Function]}
>
  <label
    className="c1 TextInputWithDropdown__input"
    htmlFor="text-input-with-dropdown"
  >
    <span
      className="c2 c3"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for bikes",
        }
      }
    />
    <div
      className="c4"
    >
      <input
        aria-describedby="text-input-with-dropdown"
        autoComplete="off"
        className="c5"
        data-testid="TextInputWithDropdownInput"
        error={false}
        id="text-input-with-dropdown"
        name="query"
        onChange={[Function]}
        placeholder=""
        prefixLength={0}
        required={false}
        type="text"
        value="c"
      />
    </div>
  </label>
  <div
    className="c6 TextInputWithDropdown__options"
    data-testid="TextInputWithDropdownDropdown"
  >
    <ul
      className="c7"
      data-testid="TextInputWithDropdownList"
      onBlur={[Function]}
      role="listbox"
    >
      <li
        aria-selected={false}
        className="c8 c9"
        data-testid="TextInputWithDropdownOption-0"
        id="option-0"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c2"
        >
          Canyon
        </span>
      </li>
      <li
        aria-selected={false}
        className="c8 c9"
        data-testid="TextInputWithDropdownOption-1"
        id="option-1"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c2"
        >
          Cannondale
        </span>
      </li>
      <li
        aria-selected={false}
        className="c8 c9"
        data-testid="TextInputWithDropdownOption-2"
        id="option-2"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c2"
        >
          Condor
        </span>
      </li>
      <li
        aria-selected={false}
        className="c8 c9"
        data-testid="TextInputWithDropdownOption-3"
        id="option-3"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c2"
        >
          Cube
        </span>
      </li>
    </ul>
  </div>
</div>
`;
